Fix card display on mobile
The cards were not showing all the text on mobile, which is a shame
because 41% of the website traffic are mobile devices. This commit makes
the card a vertical layout on small devices and updates the image size
to increase the quality. This ensures the image looks better and the
text is properly redable even on mobile devices.

--- a/html/themes/custom/av/styles/base/global.css
+++ b/html/themes/custom/av/styles/base/global.css
@@ -84,6 +84,14 @@ header > div {
     line-height: 2rem;
   }
 
+@media (max-width: 25rem) {
+
+#block-av-branding a {
+      font-size: 1.2rem;
+      line-height: 1.4rem
+  }
+    }
+
 #block-av-mainnavigation {
   margin-left: auto;
 }
